option('asan', type : 'boolean', value : false, description : 'Compile the software with AddressSanitizer')
option('ubsan', type : 'boolean', value : false, description : 'Compile the software with Undefined Behaviour Sanitizer')
option('test', type: 'string', description: 'Replace the main OpenRTX source file with a specialized test')
option('test_version', type: 'string', value: '', description: 'Override GIT_VERSION for reproducible test/CI builds (e.g. e2e-test)')
