[project]
name = "openrtx"
description = "Scripts that accompany OpenRTX sources"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.7.1",
    "ffmpeg>=1.4",
    "gcovr>=7.2",
    "intelhex==2.3.0",
    "meson>=1.2.0",
    "numpy>=1.25.2",
    "pyusb>=1.2.1",
    "setuptools>=68.0.0",
    "urllib3>=2.6.3",
]
